--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 idgenerator = "2.0.0"
+serde = { version = "1.0.214", features = ["derive"] }
+bincode = "1.3.3"
