--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ chrono = { version = "0.4", features = ["serde"] }
 idgenerator = "2.0.0"
 serde = { version = "1.0.214", features = ["derive"] }
 bincode = "1.3.3"
+rand = "0.8"
