--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ log = "0.4.22"
 env_logger = "0.11.5"
 tempfile = "3.3"
 dotenv = "0.15.0"
+libc = "0.2"
+winapi = { version = "0.3", features = ["consoleapi", "handleapi", "winbase"] }
